0.0.8
-----
1. Only show 'Random Mix' if plugin is installed.
2. Check that ExtendedBrowseModes is enabled before querying its list of modes.

0.0.7
-----
 1. Add option to split artists and albums into A..Z groups.
 2. Fix power on/off.
 3. Show play queue even if player is off.
 4. Add basic info dialog; shows server stats, players, and allows library to
    be rescanned.
 5. Cache certain settings (e.g. translation) to local storage, so that the
    initial values are set to the cached values.
 6. Fix entries being removed from 'More' entry.
 7. Add 'Music Folder', 'Random Albums', and 'Random Mix' to 'More' browse
    list.
 8. Add option to show menu when clicking on a audio item.
 9. Add icon for iOS.
10. Update Vue.js and Vuetify.js
11. Sleep timer.
12. Add option to sort favorites.
13. When using +/- buttons in volume dialog, round to nearest 5%
14. Only react to status volume changes if more than half a second since volume
    was set.
15. Use circular progress, in middle of screen, when fetching browse items.
16. Add 'Manage Players' dialog; allowing to control the volume, power, and
    playback for all players.
17. Use SlimBrowse for apps.
18. Drag'n'drop working better on iOS.

0.0.6
-----
1. Initial work on SlimBrowse - only used in favorites and radios so far.
2. Dutch, German, and French translations.
3. Group players have no replaygain setting.
4. Show album year in play queue.
5. Don't sort favorites - as the order can be determined in default web UI.
6. Ensure volume is only ever adjusted whilst dialog is shown.
7. Add insert action.

0.0.5
-----
1. When listing browse items, check for title if name is not set. Fixes
   podcast listing.
2. If browse listing only has 1 item with description, then show description
   under item. Mainly for podcasts.
3. Improve how favorites are added.
4. When adding a favorite, check if it already exists.

0.0.4
-----
1. Fix retrieval of language files.
2. Add en-gb translation.
3. Add "id" tag to install.xml file.